--- a/src/MedClinic.Desktop/MedClinic.Desktop.csproj
+++ b/src/MedClinic.Desktop/MedClinic.Desktop.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Assets\Images\" />
+    <None Remove="Assets\Images\loader2.gif" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Assets\Images\loader2.gif" />
   </ItemGroup>
 
 </Project>
