--- a/src/MedClinic.Desktop/MedClinic.Desktop.csproj
+++ b/src/MedClinic.Desktop/MedClinic.Desktop.csproj
@@ -20,4 +20,8 @@
     <Resource Include="Assets\Images\loader2.gif" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Security\" />
+  </ItemGroup>
+
 </Project>
