--- a/src/MedClinic.Desktop/appsettings.json
+++ b/src/MedClinic.Desktop/appsettings.json
@@ -8,6 +8,7 @@
     "**/platforms"
   ],
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=smart-clinic-offline; User ID=postgres; Port=5432; Password=1234;"
+    //"DefaultConnection": "Host=localhost; Database=smart-clinic-offline; User ID=postgres; Port=5432; Password=1234;"
+    "DefaultConnection": "Host=localhost; Database=smart-clinic-offline; User ID=postgres; Port=5432; Password=0809;"
   }
 }
